--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/twitter-socket.js"></script>
   </body>
 </html>
