--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <!-- Compiled from Webpack -->
     <script src="/bundle.js" defer></script>
 
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="/twitter-socket.js" defer></script>
+
   </head>
   <body>
     <div id="app"></div>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/twitter-socket.js"></script>
   </body>
 </html>
