logging tweets to chrome console!!

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Compiled from Webpack -->
     <script src="/bundle.js" defer></script>
 
+    <!-- connect to twitter stream -->
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="/twitter-socket.js" defer></script>
 
